--- a/cv.tex
+++ b/cv.tex
@@ -158,10 +158,10 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.5/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
 
-    \textsc{Jul 2011} & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
+    \textsc{Jul 2011} & 12$^{th}$ Board, \textsc{CBSE} Board                    &   91.4\% \\
                        & \normalsize\textbf{The Emerald Heights International School}, Indore\\
 
-    \textsc{Jul 2011} & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
+    \textsc{Jul 2011} & 10$^{th}$ Board, \textsc{ICSE} Board                    &   95.4\% \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
 
 \end{tabular}
@@ -186,7 +186,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 \section{Scholastic Achievements}
 
 \itemlist {
-    \textsc{2011-2014}   & Recieved an \textbf{A* grade}, for exceptional performance in
+    \textsc{2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
                             \textbf{Computer, Internet and Network Security},
                             \textbf{Computer Networks},
                             \textbf{Computer Organization},
@@ -195,7 +195,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                             \textbf{Introduction to Philosophy} \\
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{Monsoon 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
+    \textsc{2012-2013}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
                          & \footnotesize{Tutored a batch of students in ESC101 --- a core course on
                             basic concepts of programming --- the instructor-in-charge was \textbf{Professor
                             Sumit Ganguly}}\\
@@ -207,8 +207,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000-2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
                            performance throughout 2nd to 12th grade. \\
-    \textsc{---} & Secured AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympaid.\\
-    \textsc{---} & Secured AIR \textbf{54 in 9th} National Science Olympaid.\\
+    \textsc{---} & Secured AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympiad.\\
+    \textsc{---} & Secured AIR \textbf{54 in 9th} National Science Olympiad.\\
 }
 
 
@@ -286,7 +286,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {
               \begin{itemize}[leftmargin=0.5cm]
                   \item One of the eleven projects selected as a part of Mozilla's Winter of Security Initiative 2014.
-                  \item The objective of the project is to implement true arbitary multi factor authentication support in
+                  \item The objective of the project is to implement true arbitrary multi factor authentication support in
                       OpenVPN; and to implement session-support for the second factor.
                   \item \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}%
                       {https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}
@@ -300,7 +300,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
               \begin{itemize}[leftmargin=0.5cm]
                   \item Implemented an end-to-end compiler to compile ECMAScript5.1 to machine code for MIPS, in Python.
                   \item Abstracted the compiler into modules corresponding to lexing, parsing, three address code generation
-                      and machine code generation, with swappable modules.
+                      and machine code generation to provide a flexible compiler architecture.
                   \item Designed a standard library to handle printing of different data types.
                   \item Implemented functional programming concepts and recursion.
                   \item Circumvented runtime support by implementing static types and type annotations.
@@ -313,9 +313,16 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
           {
              \begin{itemize}[leftmargin=0.5cm]
-                 \item Clustered multiple authors using K-means unsupervised clustering.
-                 \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function.
-                 \item Used unigrams, bigrams and trigrams as features for clustering and Multiple Discrimanat Analysis for comparitive analysis.
+                 \item Generated a Hindi literature corpus consisting of works by Rabindranath Tagore,
+                     Vibhuti Narayan, Premchand, Sarat Chandra Chattopadhyay and Dhamarvir Bharati.
+                 \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
+                     F-scores in the range of 90-97\% for each author.
+                 \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function
+                     and achieved an F-score of 90--95\% for each author.
+                 \item Unigrams, Bigrams and Trigrams were used as features for clustering.
+                 \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
+                     collocations; there was no appreciable difference in the results with the F-scores increasing only
+                     marginally.
                  \item The inherent difficult in the project was the unavailability of stemmers and POS taggers for Hindi.
                  \item \href{https://github.com/srijanshetty/author-attribution}{https://github.com/srijanshetty/author-attribution}
              \end{itemize}
@@ -326,10 +333,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {\textsc{Operating Systems}, Professor Mainak Chaudhari}
           {
              \begin{itemize}[leftmargin=0.5cm]
-                 \item Implemented standard system calls in NachOS.
+                 \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
+                     Join, Yield, Sleep and Exit.
                      \href{https://github.com/srijanshetty/nachos-syscalls/}{https://github.com/srijanshetty/nachos-syscalls/}
                  \item Assessed the performance different Process scheduling algorithms: UNIX Scheduling, First in First Out,
-                     Round Robin, Shortest Job First and Non-preemptive job scheduling.
+                     Round Robin, Shortest Job First and Non-pre-emptive job scheduling.
                      \href{https://github.com/srijanshetty/nachos-scheduling}{https://github.com/srijanshetty/nachos-scheduling}
                  \item Evaluated the performance of different page replacement algorithms: Random Page Allocation, First in First Out,
                      Least Recently Used(LRU) and LRU Clock.
@@ -342,7 +350,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
           {
              \begin{itemize}[leftmargin=0.5cm]
-                 \item Concieved a protocol for peer-to-peer based file and media transfer.
+                 \item Conceived a protocol for peer-to-peer based file and media transfer.
                  \item Implemented the designed protocol to create a CLI agent for the same.
                  \item Leveraged Node.js to handle high number of concurrent connections.
                   \item \href{https://github.com/srijanshetty/nodesock}{https://github.com/srijanshetty/nodesock}
@@ -367,7 +375,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                \begin{itemize}[leftmargin=0.5cm]
                    \item Implemented shortest path algorithm in Prolog using Logic Programming on
                        the Delhi Metro route.
-                   \item Implemented a simple traggice server in Erlang using message passing concurrency and
+                   \item Implemented a simple traffic server in Erlang using message passing concurrency and
                        tail call recursion.
                \end{itemize}
            }
@@ -406,7 +414,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Illustrated the existence of a fundamental similarity of different situtations, by
+                   \item Illustrated the existence of a fundamental similarity of different situations, by
                        a gross simplification of different situations.
                    \item Justified the use certain moral principles across all situations by leveraging the
                        above stated hypothesis.
@@ -418,7 +426,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Independent Projects}
 
-\iproject {Jul 2014}
+\iproject {July 2014}
           {OARS}
           {
                \begin{itemize}[leftmargin=0.5cm]
@@ -430,7 +438,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                \end{itemize}
            }
 
-\iproject {Mar 2014}
+\iproject {March 2014}
           {Get Your Personal Homepage (GYPH)}
           {
                \begin{itemize}[leftmargin=0.5cm]
@@ -441,13 +449,13 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                \end{itemize}
            }
 
-\iproject {Aug 2013}
+\iproject {August 2013}
           {ShuffleRun}
           {
               \begin{itemize}[leftmargin=0.5cm]
-                  \item Designed a web app which selects a music track from a user's music library based on his current running speed.
+                  \item Designed a web application which selects a music track from a user's music library based on his current running speed.
                   \item Pitched the idea at \textbf{Yahoo! HackU 2013}.
-                  \item Recieved an honorable mention in \textbf{Yahoo!  HackU 2013} for the created hack.
+                  \item Received an honourable mention in \textbf{Yahoo!  HackU 2013} for the created hack.
                   \item \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun}
               \end{itemize}
           }
@@ -470,7 +478,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
               \begin{itemize}[leftmargin=0.5cm]
                   \item Explored various facets of \textbf{GNU/Linux} like the file system, process management,
                       memory management, shell interface etc.
-                  \item Documented all salient points for use by the freshmen of the insititue.
+                  \item Documented all salient points for use by the freshmen of the institute.
                   \item \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
               \end{itemize}
           }
@@ -523,17 +531,17 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
              }
 
 \iproject {2014}
-          {Head, Major Events and Competitions, Antaragni'14}
+          {Head, Major Events and Competitions, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Organized Mr. and Ms. Fresher's competition for the first time in IIT Kanpur.
+                   \item Organized Mr. \& Ms. Fresher's competition for the first time in IIT Kanpur.
                    \item Worked alongside the Creative team to promote Antaragni through our Social Media Campaign
                        and Social Campaign which focussed on road safety.
                \end{itemize}
           }
 
 \iproject {2013}
-          {Hospitality Coordinator, Antaragni'13}
+          {Hospitality Coordinator, Antaragni '13}
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Transformed the methodology of inviting colleges all around the country by focussing on
@@ -542,7 +550,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                        from all over the country.
                    \item Chalked out the logistics for the hospitality of \textbf{1500 students} who
                        participated in festival.
-                   \item Chalked out the logistics of the hospitality and accomodation of \textbf{1500 students} who
+                   \item Chalked out the logistics of the hospitality and accommodation of \textbf{1500 students} who
                        participated in the festival with my fellow coordinators.
                    \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the
                        festival.
@@ -551,20 +559,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           }
 
 \iproject {2013 -- 2014}
-          {Community Service, English Proficiency Programme}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
-                       Programme tries to impart a functional knowledge of English to students.
-                   \item Worked as a English tutor in the pilot programme which was aimed at helping
-                       under-privileged students from and around IIT Kanpur campus.
-                   \item Helped in organizing the second phase of the programme, aimed at school teachers
-                       by meetings principals from schools in and around IIT Kanpur.
-               \end{itemize}
-          }
-
-\iproject {2013 -- 2014}
-          {Member, Gymkhana Review Committee}
+{Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
@@ -574,7 +569,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                \end{itemize}
           }
 
-\skill {2013 -- pre}
+\skill {}
        {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
 
 \skill {2013 -- 2014}
@@ -593,10 +588,66 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
        {Qualified for the semi-finals of \textbf{Outlook SpeakOut Debate}.}
 
 %----------------------------------------------------------------------------------------
+%   COMMUNITY SERVICE
+%----------------------------------------------------------------------------------------
+
+\section{Volunteer Work}
+
+\iproject {2014 -- 2015}
+          {Member, Institute Anti Ragging Committee}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Appointed as a member of the Institute Anti Ragging Committee, a ten member committee responsible
+                       for welfare of the freshmen.
+                   \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
+                       on easing the transition of freshmen to college life.
+                   \item Ensured the institute norms regarding humane treatment of freshmen are properly conveyed to
+                       senior batches.
+               \end{itemize}
+          }
+
+\lproject {2013 -- 2014}
+          {Community Service, English Proficiency Programme}
+          {Professor Bhaskar Das Gupta}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item A brainchild of \textbf{Professor Bhaskar Das Gupta}, English Proficiency
+                       Programme tries to impart a functional knowledge of English to students.
+                   \item Worked as a English tutor in the pilot programme which was aimed at helping
+                       under-privileged students from and around IIT Kanpur campus.
+                   \item Helped in organizing the second phase of the programme, aimed at school teachers
+                       by meetings principals from schools in and around IIT Kanpur.
+               \end{itemize}
+          }
+
+\lproject {2012 -- 2013}
+          {Academic Mentor, Fundamentals of Computing}
+          {Professor Sumit Ganguly}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Tutored four students in Fundamentals of Computing, a beginner level course on C.
+                   \item Aided the instructor in understanding the difficulties faced by students by acting as a link
+                       student between the students and instructor.
+               \end{itemize}
+          }
+
+\iproject {2014 -- 2015}
+          {Social Initiative, Antaragni '14}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Organized a blood donation camp for the residents of campus.
+                   \item Mobilized information about road safety through posters, infographics and questionnaires
+                       via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
+                   \item Organized a Respect March on the 15$^{th}$ of August in honour of the sacrifices made by our
+                       freedom fighters and to instil patriotism in the campus residents.
+               \end{itemize}
+          }
+
+%----------------------------------------------------------------------------------------
 %   COURSE WORK
 %----------------------------------------------------------------------------------------
 
-\section{CourseWork}
+\section{Course Work}
 
 \begin{center}
     \begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
@@ -610,6 +661,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
         Artificial Intelligence (CS365) & (CS251 \& CS252) Computing Laboratory \\
         Computational Methods in Engineering (ESO208A) & (CS300) Technical Communication \\
         Linear Algebra (MTH102) &  (MTH101) Multivariate Calculus \\
+        Microeconomics (ECO201) & (IME636) Introduction to Game Theory \\
     \end{tabular}
 \end{center}
 
