--- a/cv.tex
+++ b/cv.tex
@@ -187,11 +187,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \itemlist {
     \textsc{2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                            \textbf{Computer, Internet and Network Security},
-                            \textbf{Computer Networks},
-                            \textbf{Computer Organization},
-                            \textbf{Logic for Computer Science},
-                            \textbf{Fundamentals of Computing},
+                            \textbf{Computer, Internet and Network Security};
+                            \textbf{Computer Networks};
+                            \textbf{Computer Organization};
+                            \textbf{Logic for Computer Science};
+                            \textbf{Fundamentals of Computing};
                             \textbf{Introduction to Philosophy} \\
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
@@ -219,13 +219,11 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \itemlist {
     \textsc{Languages} %
-            & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++}
-              (Proficient), \textbf{C\#} (Efficient)\\
+            & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient), \textbf{C\#} (Efficient)\\
     \textsc{Web Dev} %
             & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
     \textsc{Tools} %
-            & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient),
-              \textbf{Prezi} (Proficient), \textbf{Vim} (Expert), \textbf{LaTeX}
+            & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Prezi} (Proficient), \textbf{Vim} (Expert), \textbf{LaTeX}
               (Proficient)\\
 }
 
@@ -519,6 +517,9 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
 \section {Social, Leadership and Artistic Skills}
 
+\skill {}
+       {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
+
 \projectlist {Hacker, Navya, FOSS Group IIT Kanpur}
              {
                    \begin{itemize}[leftmargin=0.5cm]
@@ -568,9 +569,6 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                    \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
           }
-
-\skill {}
-       {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
 
 \skill {2013 -- 2014}
        {Editor-in-chief, Vox Populi, the campus newsletter.}
